--- a/ClientApp/src/custom.css
+++ b/ClientApp/src/custom.css
@@ -34,3 +34,13 @@ code {
 .overlay p {
     color: white;
 }
+
+#login-button {
+    float: right;
+    width: 30%;
+}
+
+#register-button {
+    float: right;
+    margin-top: 10px;
+}
