--- a/ClientApp/src/custom.css
+++ b/ClientApp/src/custom.css
@@ -1,16 +1,16 @@
 /* Provide sufficient contrast against white background */
 a {
-  color: #0366d6;
+    color: #0366d6;
 }
 
 code {
-  color: #E01A76;
+    color: #E01A76;
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
 }
 
 .overlay {
@@ -37,10 +37,53 @@ code {
 
 #login-button {
     float: right;
-    width: 30%;
+    width: auto;
 }
 
-#register-button {
+#register-link {
     float: right;
     margin-top: 10px;
+    margin-left: 100px;
 }
+
+#register-button {    
+    margin-top: 10px;    
+}
+
+.nav-links {
+    display: inline-block;
+    float: right;
+    margin-left: 10px;
+}
+
+.logo-img {
+    width: 20em;
+    padding-top: 2em;
+    margin-left:70px;
+}
+
+
+.register-page {
+    position: center;
+    background-color: #2c2c2c;
+    text-align: center;
+    margin: 0;
+    width: 100%;
+    height: 900px;
+}
+
+    .register-page h1 {
+        color: rgb(246, 33, 33);
+        font-size: 60px;
+        margin-top: 20px;
+        margin-bottom: 50px;
+        padding: 0;
+    }
+
+    .register-page p {
+        color: white;
+    }
+
+    .register-page h2, h4 {
+        color: white;
+    }
