--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using CSUN_DAS_Server
-@namespace CSUN_DAS_Server.Pages
+﻿@using DAS_Server_SignalR
+@namespace DAS_Server_SignalR.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
