--- a/ClientApp/src/custom.css
+++ b/ClientApp/src/custom.css
@@ -148,3 +148,40 @@ code {
         /* width: 90%; */
         margin: 0 auto;
     }
+
+    /* Table */
+
+    table {
+        border-collapse: collapse;
+        width: 100%;
+    }
+
+    th,
+    td {
+        border: 1px solid #ffffff;
+        text-align: left;
+        padding: 8px;
+        font-size: 32px;
+    }
+
+    th {
+        background-color: rgb(117, 201, 250);
+    }
+
+    td {
+        background-color: rgb(205, 235, 253);
+    }
+
+    form {
+        display: flex;
+        gap: 5px;
+    }
+
+    form td:last-child {
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    form * {
+        font-size: 28px;
+    }
