--- a/ClientApp/src/custom.css
+++ b/ClientApp/src/custom.css
@@ -46,8 +46,8 @@ code {
     margin-left: 100px;
 }
 
-#register-button {    
-    margin-top: 10px;    
+#register-button {
+    margin-top: 10px;
 }
 
 .nav-links {
@@ -59,7 +59,7 @@ code {
 .logo-img {
     width: 20em;
     padding-top: 2em;
-    margin-left:70px;
+    margin-left: 70px;
 }
 
 
@@ -107,10 +107,10 @@ code {
     display: block;
 }
 
-.active,
-.accordion:hover {
-    background-color: #800e0e;
-}
+    .active,
+    .accordion:hover {
+        background-color: #800e0e;
+    }
 
 .panel {
     /* padding: 0 18px; */
@@ -149,7 +149,39 @@ code {
     margin: 0 auto;
 }
 
-.not-authorized{
-    text-align:center;
-    margin: 100px auto;
+/* Table */
+
+table {
+    border-collapse: collapse;
+    width: 100%;
 }
+
+th,
+td {
+    border: 1px solid #ffffff;
+    text-align: left;
+    padding: 8px;
+    /*font-size: 32px;*/
+}
+
+th {
+    background-color: rgb(117, 201, 250);
+}
+
+td {
+    background-color: rgb(205, 235, 253);
+}
+
+form {
+    display: flex;
+    gap: 5px;
+}
+
+    form td:last-child {
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    form * {
+        font-size: 18px;
+    }
